[project]
name = "fun-house-mirror"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Casselman",email = "gicasselman1@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ultralytics (>=8.3.231,<9.0.0)"
]

[tool.poetry]
packages = [{include = "fun_house_mirror", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
