[project]
name = "fun-house-mirror"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Casselman",email = "gicasselman1@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "opencv-python (>=4.11,<5.0.0.0)",
    "ultralytics (>=8.3.231,<9.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-contrib-python (>=4.11,<5.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
